--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.5",
+    "classnames": "^2.2.6",
     "postcss-cli": "^7.1.1",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^1.6.0"
