--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.5",
+    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.6",
     "postcss-cli": "^7.1.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^1.6.0"
   }
