--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.6",
+    "moment": "^2.27.0",
     "postcss-cli": "^7.1.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.1",
